--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prisma": {
+      "shema": "./prisma/schema.prisma"
+    }
   },
   "dependencies": {
+    "@prisma/client": "^5.0.0",
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
@@ -23,6 +27,7 @@
   },
   "devDependencies": {
     "eslint": "^8.46.0",
-    "prettier": "^3.0.0"
+    "prettier": "^3.0.0",
+    "prisma": "^5.0.0"
   }
 }
