--- a/package.json
+++ b/package.json
@@ -6,10 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "prisma": {
-      "shema": "./prisma/schema.prisma"
-    }
+    "lint": "next lint"
   },
   "dependencies": {
     "@prisma/client": "^5.0.0",
@@ -18,14 +15,17 @@
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
     "eslint-config-next": "13.4.9",
+    "http-errors": "^2.0.0",
     "next": "13.4.9",
     "postcss": "8.4.25",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
+    "@types/http-errors": "^2.0.1",
     "eslint": "^8.46.0",
     "prettier": "^3.0.0",
     "prisma": "^5.0.0"
