--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/http-errors": "^2.0.4",
     "eslint": "^8.56.0",
     "prettier": "^3.1.1",
-    "prisma": "^5.7.1"
+    "prisma": "^5.7.1",
+    "sass": "^1.69.5"
   }
 }
