feat: setup s3 for images

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,7 +9,7 @@
             "jsx": true
         },
         "ecmaVersion": 12,
-        "sourceType": "module"
+        "sourceType": "commonjs"
     },
     "plugins": ["react"],
     "rules": {}
