--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.481.0",
+    "@aws-sdk/s3-request-presigner": "^3.481.0",
     "@prisma/client": "^5.7.1",
     "@types/node": "20.10.5",
     "@types/react": "18.2.45",
