--- a/package.json
+++ b/package.json
@@ -9,18 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.501.0",
-    "@aws-sdk/s3-request-presigner": "^3.501.0",
-    "@prisma/client": "^5.8.1",
-    "@types/node": "20.11.7",
-    "@types/react": "18.2.48",
-    "@types/react-dom": "18.2.18",
+     "@auth0/nextjs-auth0": "^3.5.0",
+    "@aws-sdk/client-s3": "^3.507.0",
+    "@aws-sdk/s3-request-presigner": "^3.507.0",
+    "@prisma/client": "^5.9.1",
+    "@types/node": "20.11.16",
+    "@types/react": "18.2.55",
+    "@types/react-dom": "18.2.19",
     "autoprefixer": "10.4.17",
     "eslint-config-next": "14.1.0",
     "global": "^4.4.0",
     "http-errors": "^2.0.0",
     "next": "14.1.0",
-    "postcss": "8.4.33",
+    "postcss": "8.4.35",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.4.1",
@@ -31,8 +32,8 @@
   "devDependencies": {
     "@types/http-errors": "^2.0.4",
     "eslint": "^8.56.0",
-    "prettier": "^3.2.4",
-    "prisma": "^5.8.1",
+    "prettier": "^3.2.5",
+    "prisma": "^5.9.1",
     "sass": "^1.70.0"
   }
 }
