--- a/package.json
+++ b/package.json
@@ -9,31 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
-     "@auth0/nextjs-auth0": "^3.5.0",
-    "@aws-sdk/client-s3": "^3.507.0",
-    "@aws-sdk/s3-request-presigner": "^3.507.0",
-    "@prisma/client": "^5.9.1",
-    "@types/node": "20.11.16",
-    "@types/react": "18.2.55",
-    "@types/react-dom": "18.2.19",
-    "autoprefixer": "10.4.17",
-    "eslint-config-next": "14.1.0",
+    "@aws-sdk/client-s3": "^3.550.0",
+    "@aws-sdk/s3-request-presigner": "^3.550.0",
+    "@prisma/client": "^5.12.1",
+    "@types/node": "20.12.5",
+    "@types/react": "18.2.74",
+    "@types/react-dom": "18.2.24",
+    "autoprefixer": "10.4.19",
+    "eslint-config-next": "14.1.4",
     "global": "^4.4.0",
     "http-errors": "^2.0.0",
-    "next": "14.1.0",
-    "postcss": "8.4.35",
+    "lucide-react": "^0.365.0",
+    "next": "14.1.4",
+    "postcss": "8.4.38",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.4.1",
-    "typescript": "5.3.3",
+    "tailwindcss": "3.4.3",
+    "typescript": "5.4.4",
     "yarn": "^2.4.3",
-    "yup": "^1.3.3"
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/http-errors": "^2.0.4",
-    "eslint": "^8.56.0",
+    "eslint": "^9.0.0",
     "prettier": "^3.2.5",
-    "prisma": "^5.9.1",
-    "sass": "^1.70.0"
+    "prisma": "^5.12.1",
+    "sass": "^1.74.1"
   }
 }
