--- a/package.json
+++ b/package.json
@@ -12,18 +12,22 @@
     "@aws-sdk/client-s3": "^3.550.0",
     "@aws-sdk/s3-request-presigner": "^3.550.0",
     "@prisma/client": "^5.12.1",
+    "@tailwindcss/container-queries": "^0.1.1",
     "@types/node": "20.12.5",
     "@types/react": "18.2.74",
     "@types/react-dom": "18.2.24",
     "autoprefixer": "10.4.19",
     "eslint-config-next": "14.1.4",
+    "eslint-config-prettier": "^9.1.0",
     "global": "^4.4.0",
     "http-errors": "^2.0.0",
     "lucide-react": "^0.365.0",
+    "luxon": "^3.4.4",
     "next": "14.1.4",
     "postcss": "8.4.38",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "reading-time": "^1.5.0",
     "tailwindcss": "3.4.3",
     "typescript": "5.4.4",
     "yarn": "^2.4.3",
@@ -31,7 +35,7 @@
   },
   "devDependencies": {
     "@types/http-errors": "^2.0.4",
-    "eslint": "^9.0.0",
+    "@types/luxon": "^3.4.2",
     "prettier": "^3.2.5",
     "prisma": "^5.12.1",
     "sass": "^1.74.1"
