--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint-config-next": "14.2.1",
     "eslint-config-prettier": "^9.1.0",
     "global": "^4.4.0",
+    "html-react-parser": "^5.1.10",
     "http-errors": "^2.0.0",
     "lucide-react": "^0.370.0",
     "luxon": "^3.4.4",
